--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
     "next": "13.4.19",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "xlsx": "^0.18.5"
   }
 }
